Updating to use getConstructor().newInstance() instead of just newInstance();